# candid-language-server

./: Cargo.toml  README.md
.github/workflows/: release.yml  testing.yml
benches/: completion.rs
docs/keywords/: composite_query.md  func.md  import.md  oneway.md  opt.md  principal.md  query.md  record.md  service.md  type.md  variant.md  vec.md
docs/primitives/: blob.md  bool.md  empty.md  float32.md  float64.md  int.md  int16.md  int32.md  int64.md  int8.md  nat.md  nat16.md  nat32.md  nat64.md  nat8.md  null.md  reserved.md  text.md
src/: candid_lang.rs  lib.rs  lsp.rs  main.rs
src/lsp/: completion.rs  config.rs  format.rs  hover.rs  markdown.rs  navigation.rs  position.rs  semantic_analyze.rs  semantic_token.rs  symbol_table.rs  tasks.rs  type_display.rs  type_docs.rs
tests/: formatting.rs  hover.rs
tests/data/: hover_sample.did
