[package]
name = "candid-language-server"
version = "0.0.1-experimental.6"
edition = "2024"
publish = false
license = "Apache-2.0 or MIT"

[dependencies]
anyhow = "1.0"
candid_parser = { git = "https://github.com/wiyota/candid", branch = "spanned-ast" }
dashmap = "6.1.0"
im-rc = "15.1.0"
lalrpop-util = "0.20.2"
once_cell = "1.21"
oxc_index = "4.1.0"
rapidhash = "4"
ropey = "1.6.1"
rust-lapper = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower-lsp-server = { version = "0.23" }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
proposed = ["tower-lsp-server/proposed"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
bench = []

[[bench]]
name = "completion"
harness = false
required-features = ["bench"]
